objects/OrderItem/fields/Ruby__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>