objects/OrderItem/fields/Ruby__SplitParent__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SplitParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Order Item from which this Order Item was split.</description>
    <label>Split Parent</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Split Order Items</relationshipLabel>
    <relationshipName>SplitOrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>