objects/OrderItem/fields/Ruby__Status__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Status__c</fullName>
    <description>The status of the line item</description>
    <inlineHelpText>The status of the line item.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__OrderProductStatus</valueSetName>
    </valueSet>
</CustomField>