objects/OrderItem/fields/Ruby__SubscriptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionEndDate__c</fullName>
    <description>The Subscription End Date, which is defaulted to the Subscription Start Date plus the Term (in Month).

If the Subscription End Date is updated, the Term and Subscription Term are both re-calculated accordingly.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>