objects/OrderItem/fields/Ruby__SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SubscriptionStartDate__c</fullName>
    <description>The Service Start Date, which is defaulted to the Order Start Date, but can be changed for each order line item.</description>
    <inlineHelpText>The Service Start Date, which is defaulted to the Order Start Date, but can be changed for each order line item.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>