objects/OrderItem/fields/Ruby__SummaryLineItem__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SummaryLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summary Line Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Summary Line Item)</relationshipLabel>
    <relationshipName>SummaryLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>