objects/OrderItem/fields/Ruby__SystemDiscount__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SystemDiscount__c</fullName>
    <description>The system discount percentage that is applied to the order product.</description>
    <label>System Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>