objects/OrderItem/fields/Ruby__Tax__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Tax__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>