objects/OrderItem/fields/Ruby__TaxCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxCompanyCode__c</fullName>
    <label>Tax Company Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>