objects/OrderItem/fields/Ruby__TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TotalPrice__c</fullName>
    <description>Ruby&apos;s updatable total price</description>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>