objects/OrderItem/fields/Ruby__Uom__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Uom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unit of measure, e.g. User/Month, User/Year.

Each UOM has a quantity dimension, and optionally has a term dimension.</description>
    <label>Unit of Measure</label>
    <referenceTo>Ruby__UOM__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>