objects/OrderItem/fields/SBQQ__ListPrice__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ListPrice__c</fullName>
    <description>List unit price for the product quoted by this line item. List Price originates from the price book.</description>
    <inlineHelpText>List unit price for the product quoted by this line item. List Price originates from the price book.</inlineHelpText>
    <label>List Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>