objects/OrderItem/fields/SBQQ__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TotalAmount__c</fullName>
    <description>Total amount with tax included</description>
    <inlineHelpText>Total amount with tax included</inlineHelpText>
    <label>Total Amount (With Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>