objects/OrderItem/fields/Show_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TwinField from Quote Line.  If true, NetSuite will exclude product from Invoice.</description>
    <label>Show on Invoice</label>
    <type>Checkbox</type>
</CustomField>