objects/OrderItem/fields/Standard_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Partner_Discount__c</fullName>
    <description>This field is populated by the Standard Partner Discount on the related Quote Line.</description>
    <inlineHelpText>Discount if quote is not direct.</inlineHelpText>
    <label>Standard Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>