objects/OrderItem/fields/Subsidiary_NS__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_NS__c</fullName>
    <formula>Order.Subsidiary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Subsidiary</label>
    <type>Text</type>
</CustomField>