objects/OrderItem/fields/Tax_Code_NS__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_NS__c</fullName>
    <inlineHelpText>Do not Delete, This field is mapped in Sales order creation Boomi Process</inlineHelpText>
    <label>Tax Code NS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>