objects/OrderItem/fields/Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Term_Discount__c</fullName>
    <label>Term Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>