objects/OrderItem/fields/VolumeDiscount__c.field-meta.xml
<CustomField>
    <fullName>VolumeDiscount__c</fullName>
    <label>Volume Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>