objects/OrderItem/validationRules/Ruby__Order_Product_Deactivation_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Ruby__Order_Product_Deactivation_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Ruby__Status__c ),&apos;Activated&apos;), ISPICKVAL(Ruby__Status__c, &apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>Order product deactivation is not allowed, please cancel the order to deactivate the order product</errorMessage>
</ValidationRule>